--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>html-css-float-cards</title>
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/style.css">
+        <title>html-css-float-cards</title>
     </head>
 
     <body>
-        <!-- TITLE -->
+        <div class="container">
+            <!-- TITLE AND PARAGRAPH -->
+                <h1>Meet Our Team</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi molestias quas dicta recusandae aspernatur, totam fugit animi beatae quaerat quasi voluptatum delectus impedit explicabo ex, et tempore dolore? Assumenda, animi:
+                </p>
+            <!-- FINE TITLE AND PARAGRAPH -->
 
-        <!-- FINE TITLE -->
+            <!-- MAIN -->
+                <main>
+                    <div class="colonna">
+                        <div class="riga">
+                            <div class="container-photo">
 
-        <!-- MAIN -->
-
-        <!-- FINE MAIN -->
-        
+                            </div>
+                        </div>
+                    </div>
+                </main>
+            <!-- FINE MAIN -->
+        </div>
     </body>
 
 </html>
