--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="./img/male1.png" alt="">
                     <div class="riga">
                         <p class="margin">MARCO BIANCHI</p> 
-                        <p class="margin">Designer</p>   
+                        <p>Designer</p>   
                         <a href="#">marcobianchi@team.it</a>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <img src="./img/female1.png" alt="">
                     <div class="riga">
                         <p class="margin">LAURA ROSSI</p> 
-                        <p class="margin">Front-end Developer</p>   
+                        <p>Front-end Developer</p>   
                         <a href="#">laurarossi@team.com</a>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <img src="./img/male2.png" alt="">
                     <div class="riga">
                         <p class="margin">GIORGIO VERDI</p> 
-                        <p class="margin">Back-end Developer</p>   
+                        <p>Back-end Developer</p>   
                         <a href="#">giorgioverdi@team.com</a>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <img src="./img/female2.png" alt="">
                     <div class="riga">
                         <p class="margin">MARTA IPSUM</p> 
-                        <p class="margin">SEO Specialist</p>   
+                        <p>SEO Specialist</p>   
                         <a href="#">martaipsum@team.com</a>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <img src="./img/male3.png" alt="">
                     <div class="riga">
                         <p class="margin">ROBERTO LOREM</p> 
-                        <p class="margin">Project Manager</p>   
+                        <p>Project Manager</p>   
                         <a href="#">robertolorem@team.com</a>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                     <img src="./img/female3.png" alt="">
                     <div class="riga">
                         <p class="margin">DANIELA AMET</p> 
-                        <p class="margin">Analyst</p>   
+                        <p>Analyst</p>   
                         <a href="#">danielaamet@team.com</a>
                     </div>
                 </div>
