--- a/index.html
+++ b/index.html
@@ -22,56 +22,68 @@
                 <main>
                     
                 <div class="container-photo">
-                    <img src="./img/male1.png" alt="">
-                    <div class="riga">
-                        <p class="margin">MARCO BIANCHI</p> 
-                        <p>Designer</p>   
-                        <a href="#">marcobianchi@team.it</a>
+                    <div class="row">
+                        <div class="cols">
+                            <img src="./img/male1.png" alt="">
+                            <p class="margin">MARCO BIANCHI</p> 
+                            <p>Designer</p>   
+                            <a href="#">mrcobianchi@team.com</a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="container-photo">
-                    <img src="./img/female1.png" alt="">
-                    <div class="riga">
-                        <p class="margin">LAURA ROSSI</p> 
-                        <p>Front-end Developer</p>   
-                        <a href="#">laurarossi@team.com</a>
+                    <div class="row">
+                        <div class="cols">
+                            <img src="./img/female1.png" alt="">
+                            <p class="margin">LAURA ROSSI</p> 
+                            <p>Front-end Developer</p>   
+                            <a href="#">laurarossi@team.com</a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="container-photo">
-                    <img src="./img/male2.png" alt="">
-                    <div class="riga">
-                        <p class="margin">GIORGIO VERDI</p> 
-                        <p>Back-end Developer</p>   
-                        <a href="#">giorgioverdi@team.com</a>
+                    <div class="row">
+                        <div class="cols">
+                            <img src="./img/male2.png" alt="">
+                            <p class="margin">GIORGIO VERDI</p> 
+                            <p>Back-end Developer</p>   
+                            <a href="#">giorgioverdi@team.com</a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="container-photo">
-                    <img src="./img/female2.png" alt="">
-                    <div class="riga">
-                        <p class="margin">MARTA IPSUM</p> 
-                        <p>SEO Specialist</p>   
-                        <a href="#">martaipsum@team.com</a>
+                    <div class="row">
+                        <div class="cols">
+                            <img src="./img/female2.png" alt="">
+                            <p class="margin">MARTA IPSUM</p> 
+                            <p>SEO Specialist</p>   
+                            <a href="#">martaipsum@team.com</a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="container-photo">
-                    <img src="./img/male3.png" alt="">
-                    <div class="riga">
-                        <p class="margin">ROBERTO LOREM</p> 
-                        <p>Project Manager</p>   
-                        <a href="#">robertolorem@team.com</a>
+                    <div class="row">
+                        <div class="cols">
+                            <img src="./img/male3.png" alt="">
+                            <p class="margin">ROBERTO LOREM</p> 
+                            <p>Project Manager</p>   
+                            <a href="#">robertolorem@team.com</a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="container-photo">
-                    <img src="./img/female3.png" alt="">
-                    <div class="riga">
-                        <p class="margin">DANIELA AMET</p> 
-                        <p>Analyst</p>   
-                        <a href="#">danielaamet@team.com</a>
+                    <div class="row">
+                        <div class="cols">
+                            <img src="./img/female3.png" alt="">
+                            <p class="margin">DANIELA AMET</p> 
+                            <p>Analyst</p>   
+                            <a href="#">danielaamet@team.com</a>
+                        </div>
                     </div>
                 </div>
                      
